
// proto/proxy.proto
syntax = "proto3";

package proxy;

service Proxy {
    rpc StreamCommands (stream Command) returns (stream CommandResponse);
}

message Command {
    string command = 1;
}

message CommandResponse {
    string response = 1;
}
